--- a/src/App.css
+++ b/src/App.css
@@ -16,20 +16,24 @@ body {
 }
 
 .SideBarflex {
-  width: 20%;
+  width: 30%;
 }
 
 .SideBar {
+  position: fixed; 
   height: 100vh;
-  width: 100%;
+  width: 300px; 
   background-color: #EDEDED;
+  overflow: hidden;
+  
 }
 
 .SearchProfileflex {
   display: flex;
   flex: 1;
-  gap: 20px;
+  gap: 57%;
   padding: 20px;
+  align-items: center;
 }
 
 .Searchflex, .Profileflex {
@@ -37,13 +41,7 @@ body {
   margin: 0 10px; /* Add spacing between flex items */
 }
 
-.Searchflex {
-  /* Add any additional styles specific to Searchflex */
-}
 
-.Profileflex {
-  /* Add any additional styles specific to Profileflex */
-}
 
 .SideBarList {
   height: 100%;
@@ -52,16 +50,18 @@ body {
 
 .SideBarList .row {
   width: 100%;
-  height: 60px;
+  height: 50px;
   display: flex;
   align-items: center;
-  justify-content: flex-start;
   font-family: "Manrope", sans-serif;
   font-optical-sizing: auto;
   font-weight: 500;
   font-style: normal;
   padding: 0 10px;
   font-size: 18px;
+  color:#505064;
+  justify-content:center;
+  align-items:center;
 }
 
 .SideBarList .row a {
@@ -76,9 +76,83 @@ body {
   margin-right: 10px;
 }
 
+.SideBarList .row:hover {
+  cursor:pointer;
+  background-color:#D5D5DD;
+  color:#34347B;
+}
+
+.SideBarList .row.active {
+  background-color:#D5D5DD;
+  color:#34347B;
+}
+
 .DocumentsSection {
   display: grid;
-  grid-template-columns: repeat(3, 1fr); /* 3 columns */
-  grid-gap: 20px; /* Space between grid items */
-  margin-top: 20px; /* Space between SearchProfileflex and DocumentsSection */
+  grid-template-columns: repeat(3, 1fr); 
+  grid-gap: 20px; 
+  margin-top: 20px; 
+}
+
+.SideBarTabs{
+  display:flex;
+  height:100vh;
+}
+
+
+.flexsidebar{
+  flex: 1;
+  margin: 0 10px;
+}
+
+.yourprojectstext{
+  font-family: "Manrope", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: 500;
+  font-style: normal;
+  padding: 0 10px;
+}
+
+.AllProjectText{
+  font-family: "Manrope", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: 600;
+  font-style: normal;
+  padding: 0 10px;
+  font-size:25px;
+}
+
+.DocumentsSection.grid {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr); 
+  grid-gap: 20px;
+  margin-top: 20px;
+}
+
+.DocumentsSection.stack {
+  display: flex;
+  width: 100%;   
+   padding: 50px; 
+  flex-direction: column; 
+  gap: 20px; 
+  margin-top: 20px;
+}
+
+.ProjectsHeader {
+  display: flex;
+  align-items: center; 
+  gap: 750px; 
+  margin: 20px 0; 
+}
+
+.ViewToggleIcon {
+  cursor: pointer; 
+}
+
+.manropefont{
+  font-family: "Manrope", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: 500;
+  font-style: normal;
+  padding: 0 10px;
 }
