--- a/src/Components/Documents.css
+++ b/src/Components/Documents.css
@@ -3,7 +3,7 @@
   flex-direction: column;
   align-items: center;
   padding: 20px;
-  box-shadow: 0px 0px 3px #dddd;
+  box-shadow: 0px 0px 3px #9a9898dd;
   border-radius: 8px;
   background-color: #fff;
   width: fit-content;
@@ -17,12 +17,9 @@
 }
 
 p {
-  font-family: "Manrope", sans-serif;
-  font-optical-sizing: auto;
-  font-weight: 400;
-  font-style: normal;
   margin: 0;
   text-align: left; 
   width: 100%; 
-  
 }
+
+
