--- a/src/Components/Profile.css
+++ b/src/Components/Profile.css
@@ -8,10 +8,11 @@
 .profile-box {
   display: flex;
   align-items: center;
+  position: relative; 
   padding: 10px;
   border-radius: 10px;
-  box-shadow: 0px 0px 3px #dddd;
-  width: 350px; 
+  box-shadow: 0px 0px 3px #9a9898dd;
+  width: 150px; 
 }
 
 .profile-img {
@@ -48,6 +49,11 @@
 }
 
 .dropdown-menu{
+  background-color:white;
+  box-shadow: 0px 0px 3px #dddd;
+  position: absolute; 
+  top: 100%; 
+  left: 0;
   font-family: "Manrope", sans-serif;
   font-optical-sizing: auto;
   font-weight: 400;
