--- a/src/Components/SearchBar.css
+++ b/src/Components/SearchBar.css
@@ -1,10 +1,10 @@
 .SearchBar{
   background-color:white;
-  width:100%;
+  width:350%;
   border-radius:5px;
-  height:3em;
+  height:3.5em;
   padding: 0 15px;
-  box-shadow: 0px 0px 3px #dddd;
+  box-shadow: 0px 0px 3px #9a9898dd;
   display:flex;
   align-items:center;
 }
