--- a/src/Components/SideBar.css
+++ b/src/Components/SideBar.css
@@ -1,9 +1,34 @@
-.SearchBar{
-  background-color:white;
-  font-family: "Manrope", sans-serif;
-  font-optical-sizing: auto;
-  font-weight: 600;
-  font-style: normal;
-  padding: 0 10px; 
-  font-size:18px;
+.SideBar button {
+  background-color: #34347B; 
+  color: white;             
+  border: none;            
+  border-radius: 8px;       
+  width: 210px;             
+  height: 40px;            
+  display: flex;            
+  align-items: center;       
+  justify-content: center;  
+  font-size: 20px;          
+  cursor: pointer;           
+  transition: background-color 0.3s ease; 
+  align-self: flex-start; 
+  margin-top: auto; 
+}
+
+.SideBar button:hover {
+  background-color: #504f87;
+}
+
+.SideBarList img {
+  margin-bottom: 5px; 
+  margin-top: 50px; 
+}
+
+.ArcLogo{
+   padding: 30px 0; 
+}
+
+
+.list{
+   margin-bottom: 350px;
 }
