--- a/src/App.css
+++ b/src/App.css
@@ -38,7 +38,7 @@ body {
 
 .Searchflex, .Profileflex {
   flex: 1;
-  margin: 0 10px; /* Add spacing between flex items */
+  margin: 0 10px; 
 }
 
 
